2023-12-23  Karl Berry  <karl@tug.org>

	* build-tools: autoconf 2.72 and (belatedly) makeinfo 7.1
	* tlbuild.texi (Build in parallel): mention
	TL_MAKE_FLAGS=-j`nproc` ./Build

2023-06-18  Karl Berry  <karl@freefriends.org>

	* build-tools.txt: makeinfo 7.0.3
	* tlbuild.texi (Testing one engine): mention error if SUBDIRS=.
	omission with make check:
	fatal: making test-suite.log: failed to create hitexdir/tests/hello.test

2023-02-27  Karl Berry  <karl@tug.org>

	* tlbuild-incl/tlmgr.texi: remake for path --windowsmode.

2023-02-26  Karl Berry  <karl@tug.org>

	* tlbuild-incl/tlmgr.texi,
	* tlbuild-incl/install-tl.texi: remake for 2023 versions.

2023-02-21  Karl Berry  <karl@tug.org>

	* build-tools.txt: libtool-2.4.7.

2022-05-28  Karl Berry  <karl@tug.org>

	* tlbuild.texi (Build one package): typo, buil -> build.

2022-02-19  Karl Berry  <karl@freefriends.org>

	* tlbuild.texi (Prerequisites): C++11 required by HarfBuzz;
	Python required by ICU tests.
	(Build problems): move basic idea to "Removing C++11 dependency";
	not worth its own section.
	(Build one program): add subsubheadings; mention TEXMFROOT
	and TEXMFCNF settings to run a program from the build tree.
	(Build one engine): mention testing hints.

2022-01-11  Karl Berry  <karl@freefriends.org>

	* tlbuild.texi (Prerequisites): mention use of GNU make $@ feature
	wrt tangle-sh[.in], etc.

2021-07-06  Karl Berry  <karl@tug.org>

	* tlbuild.texi (Build one package, Build one engine): more
	needed to avoid C++11 dependencies.

2021-06-30  Karl Berry  <karl@freefriends.org>

	* build-tools.txt: autoconf 2.71 and other updates.

2021-04-22  Karl Berry  <karl@tug.org>

	* tlbuild-incl/tlmgr.texi,
	* tlbuild-incl/install-tl.texi: regenerate for https://mirror.ctan.org.

2021-02-09  Karl Berry  <karl@freefriends.org>

	* tlbuild.texi (Adding a new program module): emphasize requirement
	for configure, etc., to be committed.

2020-11-28  Karl Berry  <karl@freefriends.org>
